// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconCustom/> renders correctly with border prop 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue gubCwH"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with default props 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue djBARX"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with iconSrc prop 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue howlSV"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with prop backgroundColor 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue evCsMg"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with prop color 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue djBARX"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with prop colorScheme=light 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue ixwfM"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with prop flip=horizontal 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue ivYBQB"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with prop flip=vertical 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue kISsqy"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with prop rotate 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue vSufI"
  color=""
  rotate={45}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with prop size=custom 1`] = `
<div
  className="icon-test__TestWrapper-dzMMzb ggkDKV"
>
  <div
    className="IconCustomStyled__IconCustomStyled-glxlue dkYpaH"
    color=""
    rotate={0}
    size="normal"
  />
  ,
</div>
`;

exports[`<IconCustom/> renders correctly with prop size=large 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue dfVbFt"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with prop size=small 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue hdCIYq"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with prop size=xlarge 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue eTpbCE"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with props backgroundColor and color 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue evCsMg"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with props border and borderWidth 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue zreGr"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with props border and rounded 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue gtzvhT"
  color=""
  rotate={0}
  size="normal"
/>
`;

exports[`<IconCustom/> renders correctly with props border, borderWidth, rounded 1`] = `
<div
  className="IconCustomStyled__IconCustomStyled-glxlue ehQynk"
  color=""
  rotate={0}
  size="normal"
/>
`;
